--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,12 @@
       <artifactId>sphinx4-data</artifactId>
       <version>5prealpha-SNAPSHOT</version>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>io.gatling.highcharts</groupId>-->
+      <!--<artifactId>gatling-charts-highcharts</artifactId>-->
+      <!--<version>2.2.5</version>
+    </dependency>-->
+
   </dependencies>
 
   <build>
