--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
   </dependencies>
 
   <build>
-    <finalName>EasyFan</finalName>
+    <finalName>Root</finalName>
     <plugins>
       <plugin>
         <groupId>org.eclipse.jetty</groupId>
